--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,5 +1,9 @@
-<h1>おい</h1>
+<div class="container">
+  
+  <h1>おい</h1>
 
-<div>
-  <%= link_to "ゲストログイン(閲覧用)", users_guest_sign_in_path, class: "btn", method: :post %>
+  <div>
+    <%= link_to "ゲストログイン(閲覧用)", users_guest_sign_in_path, class: "btn", method: :post %>
+  </div>
+
 </div>
