--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,29 +1,43 @@
-<h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "public/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  <div class="row justify-content-center pt-3 mb-3">
+    <h2>新規登録</h2>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+   <div class="container">
+    <div class="row justify-content-center">
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= render "public/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+        <div class="col my-3">
+          <%= f.label "ユーザー名" %><br />
+          <%= f.text_field :name, autofocus: true, autocomplete: "name", size: 50 %>
+        </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+        <div class="col my-3">
+          <%= f.label "メールアドレス" %><br />
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", size: 50 %>
+        </div>
 
-<%= render "publics/shared/links" %>
+        <div class="col my-3">
+          <%= f.label "パスワード" %>
+          <% if @minimum_password_length %>
+
+            <em>(<%= @minimum_password_length %> 文字以上)</em>
+
+          <% end %><br />
+
+          <%= f.password_field :password, autocomplete: "new-password", size: 50 %>
+        </div>
+
+        <div class="col mb-4">
+          <%= f.label "パスワード(確認用)" %><br />
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", size: 50 %>
+        </div>
+
+        <div class="row">
+          <%= f.submit "　新規登録　", class: "btn btn-success mx-auto pb-3" %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
