--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,10 +5,15 @@
 
     <div class="ml-auto">
       <% if user_signed_in? %>
+      
+        <%= link_to "投稿する", new_book_path, class: "btn btn-light mr-3" %>
         <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "btn btn-light mr-3" %>
+        
       <% else %>
+      
         <%= link_to "新規登録", new_user_registration_path, class: "btn btn-light mr-3" %>
         <%= link_to "ログイン", new_user_session_path, class: "btn btn-light mr-3" %>
+        
       <% end %>
     </div>
 
