--- a/app/views/public/books/new.html.erb
+++ b/app/views/public/books/new.html.erb
@@ -20,7 +20,7 @@
     
     <div class="row justify-content-center mb-4">
       <%= f.label :name, "ジャンル:", class: "mr-3" %><br>
-      <%= f.text_field :name, placeholder: "複数つける場合は , で区切ってください", class: "col-4" %>
+      <%= f.text_field :name, placeholder: "複数指定する場合は , で区切ってください", class: "col-4" %>
     </div>
     
 
