--- a/app/views/public/genres/index.html.erb
+++ b/app/views/public/genres/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid vh-100 bg01">
   <div class="row justify-content-center py-4">
     <div class="col-8 offset-4">
-      <h4>投稿一覧</h4>
+      <h4>ジャンル一覧</h4>
     </div>
   </div>
 
@@ -13,7 +13,7 @@
 
     </div>
     <div class="col-8">
-      <%= render 'index', books: @books %>
+      <%= render 'index', genres: @genres %>
     </div>
   </div>
 </div>
