--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,19 +1,32 @@
   <div class="row">
-    <%= link_to root_path, class: "btn" do %>
-      <h4>Honde、Donaiyanen。</h4>
+    
+    <% if admin_signed_in? %>
+      <%= link_to admin_home_path, class: "btn" do %>
+        <h4>Honde、Donaiyanen。</h4>
+      <% end %>
+      
+    <% else %>
+      <%= link_to root_path, class: "btn" do %>
+        <h4>Honde、Donaiyanen。</h4>
+      <% end %>
     <% end %>
 
     <div class="ml-auto">
       <% if user_signed_in? %>
-      
+
         <%= link_to "投稿する", new_book_path, class: "btn btn-light mr-3" %>
         <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "btn btn-light mr-3" %>
-        
+
+      <% elsif admin_signed_in? %>
+
+        管理者でログイン中
+        <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: "btn btn-light mx-3" %>
+
       <% else %>
-      
+
         <%= link_to "新規登録", new_user_registration_path, class: "btn btn-light mr-3" %>
         <%= link_to "ログイン", new_user_session_path, class: "btn btn-light mr-3" %>
-        
+
       <% end %>
     </div>
 
