--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,11 @@
       <%= render 'layouts/header' %>
     </header>
 
-    
+    <div class="container-fluid vh-100 bg01">
       <%= yield %>
-    
+    </div>
+
+
 
     <footer class="row justify-content-center border-top my-2 py-2">
       <%= render 'layouts/footer' %>
