--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,9 +12,11 @@
     <% end %>
 
     <div class="ml-auto">
+      
+      <%= link_to "HonDonaとは", home_about_path, class: "btn mr-3" %>
       <% if user_signed_in? %>
 
-        <%= link_to "投稿する", new_book_path, class: "btn btn-light mr-3" %>
+        
         <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "btn btn-light mr-3" %>
 
       <% elsif admin_signed_in? %>
