--- a/app/views/public/searches/book_genre_result.html.erb
+++ b/app/views/public/searches/book_genre_result.html.erb
@@ -7,7 +7,8 @@
 
   <div class="row justify-content-center">
     <div class="col-8">
-      <%= render 'public/books/genre_index', genres: @genres %>
+
+     <%= render 'public/books/index', books: @books %>
     </div>
   </div>
 </div>
