--- a/app/views/public/genres/index.html.erb
+++ b/app/views/public/genres/index.html.erb
@@ -1,19 +1,16 @@
-<div class="container-fluid vh-100 bg01">
-  <div class="row justify-content-center py-4">
-    <div class="col-8 offset-4">
-      <h4>ジャンル一覧</h4>
-    </div>
+<div class="row justify-content-center pt-4 mb-5">
+  <div class="col-8 offset-3">
+    <h4>ジャンル一覧</h4>
   </div>
+</div>
 
-  <div class="row">
-    <div class="col-3 mt-1">
-
-      <%# ジャンル検索バー %>
-      <%= render 'public/searches/search_bar' %>
-
-    </div>
-    <div class="col-8">
-      <%= render 'index', genres: @genres %>
-    </div>
+<div class="row">
+  <div class="col-3">
+    <%# ジャンル検索バー %>
+    <%= render 'public/searches/search_bar' %>
+  </div>
+  
+  <div class="col-8">
+     <%= render 'index', genres: @genres %>
   </div>
 </div>
