--- a/app/views/public/searches/_search_bar.html.erb
+++ b/app/views/public/searches/_search_bar.html.erb
@@ -1,7 +1,7 @@
 <div class="container rounded border border-dark bg-light">
   ジャンル検索
   <div class="row m-2">
-    <%= form_with url: genre_search_path,method: :get, local: true do |f| %>
+    <%= form_with url: genres_search_path, method: :get, local: true do |f| %>
       <div class="form-inline">
         <%= f.text_field :word, class: "form-control form-control-sm mr-3" %>
         <%= f.submit '検索', class: "btn btn-primary" %>
