--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,6 +1,6 @@
 <div class="row pt-5">
   <div class="col-6 offset-3">
-    <div class="row border-bottom mb-5">
+    <div class="row mb-5">
 
       <div class="align-self-center">
         <h4>ユーザー：　<%= @user.name %></h4>
