--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -15,13 +15,13 @@
    また、そのジャンルが適しているかをレビューする機能もございます。不適の評価が多いものは管理人が
    削除いたします。
    <div class="row mt-2 mb-1">
-     <h5>使い方　--　ジャンルから本を探す</h5>
+     <h5><u>使い方　--　ジャンルから本を探す</u></h5>
    </div>
    本ページ左部のフォームにジャンル名を入力していただくと、そのジャンルを持つ本が表示されます。
    または、上部のジャンル一覧ページへ行き、ジャンル名をクリックするとそのジャンルがつけられた本が表示されます。
    
    <div class="row mt-2">
-     <h5>使い方　--　本を投稿する</h5>
+     <h5><u>使い方　--　本を投稿する</u></h5>
    </div>
    本ページ上部の"投稿する"ボタンを押していただき、フォームにしたがって入力してください。
    また、同様に上部にあるユーザー名のページから自身の投稿一覧があるので、そこから投稿詳細の確認・編集することが出来ます。
