--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -9,6 +9,12 @@ body {
   background-image: url(../images/bg01.jpg);
   background-size: cover;
   background-repeat: no-repeat;
+}
 
+.bigmargintop {
+  margin-top: 150px;
+}
 
+.margintop {
+  margin-top: 75px;
 }
