--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,7 +1,7 @@
-<div class="col-9 offset-3 pt-5">
+<div class="col-8 offset-3 pt-5">
   
-  <div class="row border-bottom mt-3 mb-5">
-    <div class="col-6">
+  <div class="row margintop mb-5">
+    <div class="col-6 border-bottom">
       <h5>ユーザー管理　　––––→</h5>
     </div>
     <div class="col-6">
@@ -9,8 +9,8 @@
     </div>
   </div>
   
-  <div class="row border-bottom mb-5">
-    <div class="col-6">
+  <div class="row mb-5">
+    <div class="col-6 border-bottom">
       <h5>投稿管理　　　　––––→</h5>
     </div>
     <div class="col-6">
@@ -18,8 +18,8 @@
     </div>
   </div>
   
-  <div class="row border-bottom">
-    <div class="col-6">
+  <div class="row">
+    <div class="col-6 border-bottom">
       <h5>ジャンル管理　　––––→</h5>
     </div>
     <div class="col-6">
