--- a/app/views/public/books/show.html.erb
+++ b/app/views/public/books/show.html.erb
@@ -1,13 +1,36 @@
-<div class="container-fluid vh-95 bg01">
-  <div class="row justify-content-center my-4">
-    <h5><%= book.title %></h5>
+<div class="row pt-5">
+  <div class="col-8 offset-4">
+    <h5><%= @book.title %></h5>
   </div>
-  
-  <div class="row justify-content-center">
-    作品概要
+</div>
+
+<div class="row margintop">
+  <div class="col-3 ml-2 mt-3">
+    <%# ジャンル検索バー %>
+    <%= render 'public/searches/search_bar' %>
+  </div>
+
+  <div class="col-7">
     <div class="container">
-      <%= book.explanation %>
+      <table class="table table-borderless">
+
+        <tr>
+          <td style="width: 20%">作品概要：</td>
+          <td><%= @book.explanation %></td>
+        </tr>
+
+        <tr>
+          <td style="width: 20%">ジャンル：</td>
+          <td>
+            <% @book.genres.each do |genre| %>
+
+              <%= link_to genre.name, books_genre_search_path(word: genre.name), class: "btn-sm btn-secondary mr-2" %>
+
+            <% end %>
+          </td>
+        </tr>
+
+      </table>
     </div>
   </div>
-  
 </div>
