--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,30 +1,26 @@
-<div class="col-6 offset-3 pt-3">
-  
+<div class="col-6 offset-3 pt-5">
+
   <div class="row mb-5">
     <h2>ようこそ、Honma、Donaiyanen。へ</h2>
   </div>
-  
-  <div class="row mb-5">
-    <div class="col border-bottom border-dark">
-      Honde、Donaiyanen。てなんやねん。
+
+  <div class="bigmargintop">
+    <div class="row mb-5">
+      <h5><u>Honde、Donaiyanen。とは</u>　</h5>
       <%= link_to home_about_path do %>
         <i class="fa-solid fa-square-up-right"></i>
       <% end %>
     </div>
-  </div>
-  
-  <div class="row">
-    <div class="col border-bottom border-dark">
-      ゲストログイン(閲覧用)
+
+    <div class="row margintop">
+      <h5><u>ゲストログイン(閲覧用)</u>　</h5>
       <%= link_to users_guest_sign_in_path, method: :post do %>
         <i class="fa-solid fa-square-up-right"></i>
       <% end %>
     </div>
   </div>
-  
-  
+
 </div>
 
 
 
-  
