--- a/app/views/public/searches/book_genre_result.html.erb
+++ b/app/views/public/searches/book_genre_result.html.erb
@@ -5,10 +5,6 @@
         </div>
   </div>
 
-  <div class="row justify-content-center">
-    <div class="col-8">
+  <%= render 'public/books/template', books: @books %>
 
-     <%= render 'public/books/index', books: @books %>
-    </div>
-  </div>
 </div>
