--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,18 +1,18 @@
-<div class="col-6 offset-3 pt-3">
-  
-  <div class="row mb-5">
+<div class="col-6 offset-3 pt-5">
+
+  <div class="row">
     <h2>ようこそ、Honma、Donaiyanen。へ</h2>
   </div>
-  
-  <div class="row mb-5">
+
+  <div class="row bigmargintop mb-5">
     <div class="col border-bottom border-dark">
-      Honde、Donaiyanen。てなんやねん。
+      Honde、Donaiyanen。とは
       <%= link_to home_about_path do %>
         <i class="fa-solid fa-square-up-right"></i>
       <% end %>
     </div>
   </div>
-  
+
   <div class="row">
     <div class="col border-bottom border-dark">
       ゲストログイン(閲覧用)
@@ -21,10 +21,9 @@
       <% end %>
     </div>
   </div>
-  
-  
+
+
 </div>
 
 
 
-  
