--- a/app/views/public/dislikes/_btn.html.erb
+++ b/app/views/public/dislikes/_btn.html.erb
@@ -1,11 +1,11 @@
 <% if genre.disliked_by?(current_user) %>
-  <%= link_to book_dislikes_path(genre), method: :delete do %>
-    <i class="fa-solid fa-heart" aria-hidden="true" style="color: red;"></i>
+  <%= link_to book_dislikes_path(genre), method: :delete, remote: true do %>
+    <i class="fa-solid fa-heart-crack" aria-hidden="true" style="color: blue;"></i>
     <%= genre.dislikes.count %>
   <% end %>
 <% else %>
-  <%= link_to book_favorites_path(genre), method: :post do %>
-    <i class="fa-regular fa-heart" aria-hidden="true"></i>
+  <%= link_to book_dislikes_path(genre), method: :post, remote: true do %>
+    <i class="fa-solid fa-heart-crack" aria-hidden="true"></i>
     <%= genre.dislikes.count %>
   <% end %>
 <% end %>
