--- a/app/views/public/books/show.html.erb
+++ b/app/views/public/books/show.html.erb
@@ -24,32 +24,33 @@
           <td id="review_btns_<%= @book.id %>">
             <% @book.genres.each do |genre| %>
 
-              <%= link_to genre.name, books_genre_search_path(word: genre.name), class: "btn-sm btn-secondary mr-2" %>
+                <%= link_to genre.name, books_genre_search_path(word: genre.name), class: "btn-sm btn-secondary mr-2" %>
               
-              <%# guestは評価を見るだけ %>
-              <% if current_user.id != 3 %>
+                <%# guestは評価を見るだけ %>
+                <% if current_user.guest? %>
+                  <i class="fa-solid fa-heart" aria-hidden="true" style="color: red;"></i>
+                  <%= genre.favorites.count %>
+                
+                  <i class="fa-solid fa-heart-crack" aria-hidden="true" style="color: blue;"></i>
+                  <%= genre.dislikes.count %>
               
-              <%# favあり→fav消すボタンのみ表示 %>
+                      
+                <% else %>
+                      <%# favあり→fav消すボタンのみ表示 %>
                       <% if genre.favorited_by?(current_user) %>
                           <%= render 'public/favorites/btn', genre: genre %>
                 
-              <%# favなし、disあり→dis消すボタンのみ表示 %>  
+                      <%# favなし、disあり→dis消すボタンのみ表示 %>  
                       <% elsif genre.disliked_by?(current_user) %>
                           <%= render 'public/dislikes/btn', genre: genre %>
                   
-              <%# favなし、disなし→ボタン2つ表示 %>
+                      <%# favなし、disなし→ボタン2つ表示 %>
                       <% else %>
                           <%= render 'public/favorites/btn', genre: genre %>
                           <%= render 'public/dislikes/btn', genre: genre %>
                       <% end %>
-                      
-              <% else %>
-                <i class="fa-solid fa-heart" aria-hidden="true" style="color: red;"></i>
-                <%= genre.favorites.count %>
-                
-                <i class="fa-solid fa-heart-crack" aria-hidden="true" style="color: blue;"></i>
-                <%= genre.dislikes.count %>
-              <% end %>
+                <% end %>
+              
             <% end%>
           </td>
         </tr>
