--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -11,6 +11,13 @@ body {
   background-repeat: no-repeat;
 }
 
+.bgcolor {
+  background-color: #7a6357;
+}
+
+.fontcolor {
+  color: #dbd5d1;
+}
 
 .bigmargintop {
   margin-top: 150px;
@@ -20,3 +27,11 @@ body {
   margin-top: 75px;
 }
 
+.ptop {
+  padding-top: 75px;
+}
+
+.flashm {
+  margin-left: 270px;
+  color: green;
+}
