--- a/app/views/public/genres/_template.html.erb
+++ b/app/views/public/genres/_template.html.erb
@@ -1,10 +1,10 @@
 <div class="row margintop">
-    <div class="col-3">
+    <div class="col-3 pt-3">
       <%# ジャンル検索バー %>
       <%= render 'public/searches/search_bar' %>
     </div>
   
-    <div class="col-8">
+    <div class="col-8 border-top pt-3">
       
       <div class="container">
         <div class="row">
