--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <header class="border-bottom border-dark px-3 pt-2 pb-1">
+    <header class="border-bottom border-dark px-3 pt-2 pb-1 bgcolor">
       <%= render 'layouts/header' %>
     </header>
 
@@ -22,7 +22,7 @@
 
 
 
-    <footer class="row justify-content-center border-top border-dark py-2">
+    <footer class="row justify-content-center border-top border-dark py-2 bgcolor">
       <%= render 'layouts/footer' %>
     </footer>
 
