--- a/app/views/public/books/_template.html.erb
+++ b/app/views/public/books/_template.html.erb
@@ -6,7 +6,7 @@
 
   <div class="col-7">
     <div class="container">
-      <table class="table border-bottom">
+      <table class="table table-hover border-bottom">
         <thead>
           <tr>
             <th style="width: 30%">　タイトル</th>
@@ -17,7 +17,7 @@
         <tbody>
           <% books.each do |book| %>
             <tr>
-              <td><%= link_to book.title, book_path(book.id), class: "btn" %></td>
+              <td><%= link_to book.title, book_path(book.id) %></td>
               <td>
                 <% book.genres.each do |genre| %>
                   <%= link_to genre.name, books_genre_search_path(word: genre.name), class: "btn-sm btn-secondary mr-2" %>
