--- a/app/views/public/books/index.html.erb
+++ b/app/views/public/books/index.html.erb
@@ -1,5 +1,7 @@
+<div class="fs-6 flashm"><%= flash[:notice] %></div>
 <div class="row justify-content-center pt-5">
   <div class="col-8 offset-4">
+    
     <h4>みんなの投稿一覧</h4>
   </div>
 </div>
