--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,32 +1,37 @@
-<div class="col-6 offset-3 pt-5">
-  <div class="row mb-1">
-     <h5>"あのジャンルの本が読みたいけど、どう検索すればいいんだろう..."</h5>
-     <h5>"次に読む本何にしよう..."</h5>そんな悩み、ございませんか？
-   </div>
-   Honde、Donaiyanen。はそんな悩みを持つ方へ向けて作成されたサイトです。
-   本に対してユーザーが作成したジャンルをつける仕組みをとっているため、
+<div class="row pt-5">
+  <div class="col-3 pt-5">
+    <%= render 'public/searches/search_bar' %>
+  </div>
+  
+  <div class="col-6">
+    <div class="row">
+     <h5>"あのジャンルの本が読みたいけど、なかなか見つからない..."</h5>
+     <h5>"次に読む本何にしよう..."</h5>　そんな悩み、ございませんか？
+    </div>
+    Honde、Donaiyanen。はそんな悩みを持つ方へ向けて作成されたサイトです。<br>
+    ユーザーが作成したジャンルを本につけるという仕組みをとっているため、<br>
    
-   たとえば、その本を読んだあなたがミステリと感じたのであればミステリジャンル、
-   恋愛ものと感じたのであれば恋愛もののジャンルをつける、といったことが出来ます。
+    その本を読んだあなたがミステリと感じたのであればミステリジャンル、<br>
+    恋愛ものと感じたのであれば恋愛もののジャンルをつける、etc... <br>
    
-   つまり、"作品の本筋ではないけれど部分的に該当するジャンル"、"マイナーで検索が難しいジャンル"
-   を探すことが容易になるのです。
+    "物語の本筋ではないジャンル"、"マイナーで検索が難しいジャンル"<br>
+    といった本を探すことが容易になるのです。<br>
    
-   また、そのジャンルが適しているかをレビューする機能もございます。不適の評価が多いものは管理人が
-   削除いたします。
-   <div class="row mt-2 mb-1">
-     <h5><u>使い方　--　ジャンルから本を探す</u></h5>
-   </div>
-   本ページ左部のフォームにジャンル名を入力していただくと、そのジャンルを持つ本が表示されます。
-   または、上部のジャンル一覧ページへ行き、ジャンル名をクリックするとそのジャンルがつけられた本が表示されます。
+    ジャンルが適しているかを評価する機能もございます。<br>
+    評価が低いものは管理人がチェック・削除いたします。
+    <div class="row mt-2 mb-1">
+      <h5><u>使い方　--　ジャンルから本を探す</u></h5>
+    </div>
+    本ページ左部のフォームにジャンル名を入力していただくと、そのジャンルを持つ本が表示されます。
+    または、上部のジャンル一覧ページへ行き、ジャンル名をクリックするとそのジャンルがつけられた本が表示されます。
    
-   <div class="row mt-2">
-     <h5><u>使い方　--　本を投稿する</u></h5>
-   </div>
-   本ページ上部の"投稿する"ボタンを押していただき、フォームにしたがって入力してください。
-   また、同様に上部にあるユーザー名のページから自身の投稿一覧があるので、そこから投稿詳細の確認・編集することが出来ます。
-   投稿・ジャンルを削除したい場合は、お手数ですが削除申請を願います。管理人が確認後削除いたします。
-   ジャンルは自由に追加可能です(最大8件)。
+    <div class="row mt-2">
+      <h5><u>使い方　--　本を投稿する</u></h5>
+    </div>
+    本ページ上部の"投稿する"ボタンを押していただき、フォームにしたがって入力してください。
+    また、同様に上部にあるユーザー名のページから自身の投稿一覧があるので、そこから投稿詳細の確認・編集することが出来ます。
+    投稿・ジャンルを削除したい場合は、お手数ですが削除申請を願います。管理人が確認後削除いたします。
+    ジャンルは自由に追加可能です(最大8件)。
    
   </div>
 </div>
