--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,5 +1,5 @@
 
-  <div class="row justify-content-center pt-3 mb-3">
+  <div class="row justify-content-center pt-5 mb-3">
     <h2>新規登録</h2>
   </div>
 
@@ -35,7 +35,7 @@
         </div>
 
         <div class="row">
-          <%= f.submit "　新規登録　", class: "btn btn-success mx-auto pb-3" %>
+          <%= f.submit "　新規登録　", class: "btn btn-success mx-auto" %>
         </div>
       <% end %>
     </div>
