--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -35,3 +35,11 @@ body {
   margin-left: 270px;
   color: green;
 }
+
+.ftcolor {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #7a6357;
+}
