--- a/app/views/admin/books/index.html.erb
+++ b/app/views/admin/books/index.html.erb
@@ -7,9 +7,14 @@
       
         <%= book.title %>　｜
         <% book.genres.each do |genre| %>
-          　<%= genre.name %>
+       
+            <%= genre.name %>
+          　 <i class="fa-solid fa-heart-crack" style="color: blue;"></i>
+                  <%= genre.dislikes.count %>
+          
+          　
         <% end %>
-        <%= link_to "　削除　", admin_book_path(book.id), method: :delete, class: "btn btn-danger ml-auto mr-3 mb-2" %>
+        <%= link_to "　削除　", book_path(book.id), method: :delete, class: "btn btn-danger ml-auto mr-3 mb-2" %>
         
       </div>
     <% end %>
