--- a/app/views/public/books/_genre_fields.html.erb
+++ b/app/views/public/books/_genre_fields.html.erb
@@ -2,6 +2,6 @@
 <div class="nested-fields mb-2">
     <%# link_to_add_associationのform_nameで指定した名前。(初期値 : f)  %>
 
-    <%= genre.text_field :name, size: 50 %>
-    <%= link_to_remove_association "－", genre, class: "btn btn-info rounded-circle p-0 mb-1", style: "width:25px;height:25px;" %>
+    <%= book.text_field :name, size: 50 %>
+    <%= link_to_remove_association "－", book, class: "btn btn-info rounded-circle p-0 mb-1", style: "width:25px;height:25px;" %>
 </div>
