--- a/app/views/public/books/new.html.erb
+++ b/app/views/public/books/new.html.erb
@@ -37,7 +37,7 @@
                                 association_insertion_method: 'before'
                               },
                               # フォームオブジェクトを指定する場合(初期値 : f)
-                              form_name: 'genre',
+                              form_name: 'book',
                               # 部分テンプレートに渡す変数があれば記述
                               render_options: {
                                 locals: {
