--- a/app/views/public/books/new.html.erb
+++ b/app/views/public/books/new.html.erb
@@ -12,51 +12,36 @@
       <%= book.label :title, 'タイトル' %><br>
       <%= book.text_field :title, size: 50 %>
     </div>
-      
+
     <div class="col mb-3">
       <%= book.label :explanation, '作品概要' %><br>
       <%= book.text_area :explanation, size: "50x5" %><br>
     </div>
 
     <div class="col mb-3">
-      <%# トラックの追加フォームをするボタン %>
-      <%# 詳しいオプション : https://github.com/nathanvda/cocoon#link_to_add_association %>
-      <%= book.label :name, "ジャンル" %>
-      <%= link_to_add_association '+',
-                                  # form_withのformタグ変数
-                                  book,
-                                  # フォームのデータを追加するモデル名
-                                  :genres,
-                                  # 追加するフォームの部分テンプレート
-                                  partial: "genre_fields",
-                                  # オプション
-                                  data: {
-                                  # フォームを追加する場所の指定
-                                  association_insertion_node: '#genre-forms',
-                                # フォームを前後どの位置に追加するか。(初期値: before)
-                                association_insertion_method: 'before'
-                              },
-                              # フォームオブジェクトを指定する場合(初期値 : f)
-                              form_name: 'book',
-                              # 部分テンプレートに渡す変数があれば記述
-                              render_options: {
-                                locals: {
-                                  # 通常の部分テンプレートと同じ記述
-                                }
-                              }, class: "btn btn-info rounded-circle p-0 mb-1", style: "width:25px;height:25px;"
-  %>
+      <%= book.label :genre_name, 'ジャンル' %>
+      <span id="add_genre">+</span>
+      <br>
+      <%= text_field_tag "genre_name", "", {name: "genre_name[]"} %><br>
+      <div id="aaa">
 
-      <%# フォームを追加する場所。%>
-      <%#   link_to_add_associationのassociation_insertion_nodeで指定 %>
-      <div id="genre-forms" class="mb-2">
-        <%= book.fields_for :genres do |genre| %>
-          <% render 'genre_fields', genre: genre %>
-        <% end %>
       </div>
     </div>
-  </div>
-    
-  <div class="row justify-content-center"> 
+
+
+  <div class="row justify-content-center">
     <%= book.submit "投稿する", class: "btn btn-success" %>
-  </div>  
+  </div>
 <% end %>
+
+<script>
+  window.onload = function(){
+    function addGenreField(){
+     let html = `<input type="text" name="genre_name[]">`
+     document.getElementById("aaa").insertAdjacentHTML('beforeEnd', html);
+    }
+    document.getElementById("add_genre").addEventListener('click', addGenreField)
+    console.log("OK")
+  }
+
+</script>
