--- a/app/views/public/books/new.html.erb
+++ b/app/views/public/books/new.html.erb
@@ -56,7 +56,7 @@
     </div>
   </div>
     
-  <div class="row justify-content-center"> 
+  <div class="row justify-content-center mb-5"> 
     <%= book.submit "投稿する", class: "btn btn-success" %>
   </div>  
 <% end %>
