--- a/app/views/public/books/show.html.erb
+++ b/app/views/public/books/show.html.erb
@@ -1,41 +1,37 @@
-<div class="row pt-5">
-  <div class="col-8 offset-4">
-    <div class="row">
-       <h4><%= @book.title %></h4>
-      
-    </div>
-   
+<div class="container-fluid vh-100 bg01">
+  <div class="col-8 offset-4 pt-5">
+        
+     <h4><%= @book.title %></h4>
     
   </div>
-</div>
+  
+  <div class="row margintop">
+    <div class="col-3 ml-2 mt-3">
+      <%# ジャンル検索バー %>
+      <%= render 'public/searches/search_bar' %>
+    </div>
 
-<div class="row margintop">
-  <div class="col-3 ml-2 mt-3">
-    <%# ジャンル検索バー %>
-    <%= render 'public/searches/search_bar' %>
-  </div>
+    <div class="col-7">
+      <div class="container">
+        <table class="table table-borderless">
 
-  <div class="col-7">
-    <div class="container">
-      <table class="table table-borderless">
-
-        <tr>
-          <td style="width: 20%">作品概要：</td>
-          <td>
-            <%= @book.explanation %><br>
-            本文の感情分析スコア　<%= @book.score %>
-          </td>
+          <tr>
+            <td style="width: 20%">作品概要：</td>
+            <td>
+              <%= @book.explanation %><br>
+              本文の感情分析スコア　<%= @book.score %>
+            </td>
           
-        </tr>
+          </tr>
 
-        <tr>
-          <td style="width: 20%">ジャンル：</td>
-          <td id="review_btns_<%= @book.id %>">
-            <% @book.genres.each do |genre| %>
+          <tr>
+            <td style="width: 20%">ジャンル：</td>
+            <td id="review_btns_<%= @book.id %>">
+              <% @book.genres.each do |genre| %>
 
                 <%= link_to genre.name, books_genre_search_path(word: genre.name), class: "btn-sm btn-secondary mr-2" %>
               
-                <%# guestは評価を見るだけ %>
+                <%# guestは評価のカウントを見るだけ %>
                 <% if current_user.guest? %>
                   <i class="fa-solid fa-heart" aria-hidden="true" style="color: red;"></i>
                   <%= genre.favorites.count %>
@@ -45,29 +41,32 @@
               
                       
                 <% else %>
-                    <%# 自分の投稿は評価できない %>
-                    <% if @book.user_id != current_user.id %>
-                      <%# favあり→fav消すボタンのみ表示 %>
+                  <%# 自分の投稿は評価できない %>
+                  <% if @book.user_id != current_user.id %>
+                  
+                      <%# fav済み→fav取り消しボタンのみを表示 %>
                       <% if genre.favorited_by?(current_user) %>
                           <%= render 'public/favorites/btn', genre: genre %>
                 
-                      <%# favなし、disあり→dis消すボタンのみ表示 %>  
+                      <%# dis済み→dis取り消しボタンのみを表示 %>  
                       <% elsif genre.disliked_by?(current_user) %>
                           <%= render 'public/dislikes/btn', genre: genre %>
                   
-                      <%# favなし、disなし→ボタン2つ表示 %>
+                      <%# 未fav、未dis→ボタン2つ表示 %>
                       <% else %>
                           <%= render 'public/favorites/btn', genre: genre %>
                           <%= render 'public/dislikes/btn', genre: genre %>
                       <% end %>
-                    <% end%>
+                      
+                  <% end %>
                 <% end %>
               
-            <% end%>
-          </td>
-        </tr>
+              <% end%>
+            </td>
+          </tr>
 
-      </table>
+        </table>
+      </div>
     </div>
   </div>
 </div>
