--- a/app/views/public/books/index.html.erb
+++ b/app/views/public/books/index.html.erb
@@ -7,3 +7,7 @@
 </div>
 
 <%= render 'template', books: @books %>
+
+<div class="row justify-content-center mb-3">
+  <%= paginate @books %>
+</div>
