--- a/app/views/public/books/new.html.erb
+++ b/app/views/public/books/new.html.erb
@@ -15,7 +15,7 @@
       
     <div class="col mb-3">
       <%= book.label :explanation, '作品概要' %><br>
-      <%= book.text_area :explanation, size: "50x5" %><br>
+      <%= book.text_area :explanation, placeholder: "空白でも可", size: "50x5" %><br>
     </div>
 
     <div class="col mb-3">
