--- a/app/views/public/books/show.html.erb
+++ b/app/views/public/books/show.html.erb
@@ -3,8 +3,9 @@
     <div class="row">
       
       <h4><%= @book.title %></h4>
-      <%= link_to "削除", book_path(@book), method: :delete, class: "btn btn-danger ml-auto mr-3" %>
-      
+      <% if @book.user_id == current_user.id %>
+        <%= link_to "削除", book_path(@book), method: :delete, class: "btn btn-danger ml-auto mr-3", data: { confirm: "投稿を削除しますか？" } %>
+      <% end %>
     </div> 
   </div>    
   
