--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,5 +1,6 @@
-<div class="col-8 offset-3 pt-5">
+<div class="row justify-content-center pt-5">
   <h4><%= @user.name %>さんのマイページ</h4>
+  <%= link_to "退会する", users_withdraw_path, method: :patch, class: "btn btn-danger ml-5 mr-3", data: { confirm: "本当に退会しますか？" } %>
 </div>
 
 <div class="container mt-5">
