destroy_add&error_message add

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -32,8 +32,15 @@ body {
 }
 
 .flashm {
-  margin-left: 270px;
+  text-align:  center; 
+  font-size: 16px;
   color: green;
+}
+
+.errorm {
+  text-align: center;
+  font-size: 16px;
+  color: red;
 }
 
 .ftcolor {
