Revert "Genre update"

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -32,15 +32,8 @@ body {
 }
 
 .flashm {
-  text-align:  center; 
-  font-size: 16px;
+  margin-left: 270px;
   color: green;
-}
-
-.errorm {
-  text-align: center;
-  font-size: 16px;
-  color: red;
 }
 
 .ftcolor {
