--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -14,23 +14,24 @@
     その本を読んだあなたがミステリと感じたのであればミステリジャンル、<br>
     恋愛ものと感じたのであれば恋愛もののジャンルをつける、etc... <br>
    
-    つまり、このサイトを利用することで。"物語の本筋ではないジャンル"、<br>
-    "マイナーで検索が難しいジャンル"といった本を探すことが容易になるのです。<br>
+    "物語の本筋ではないジャンル"、"マイナーで検索が難しいジャンル"<br>
+    といった本を探すことが容易になるのです。<br>
    
-    本につけられたジャンルが適しているかを評価する機能もございます。<br>
-    適さない評価が多く集まったものは管理人がチェック・削除いたします。
+    ジャンルが適しているかを評価する機能もございます。<br>
+    評価が低いものは管理人がチェック・削除いたします。
     <div class="row mt-2 mb-1">
       <h5><u>使い方　--　ジャンルから本を探す</u></h5>
     </div>
-    本ページ左部のフォームにジャンル名を入力していただくと、そのジャンルを持つ本が検索されます。<br>
-    上部のジャンル一覧ページからジャンル名をクリックしていただくことでそのジャンルがつけられた本が表示されます。
+    本ページ左部のフォームにジャンル名を入力していただくと、そのジャンルを持つ本が表示されます。
+    または、上部のジャンル一覧ページへ行き、ジャンル名をクリックするとそのジャンルがつけられた本が表示されます。
    
     <div class="row mt-2">
       <h5><u>使い方　--　本を投稿する</u></h5>
     </div>
-    ログイン後、ヘッダーの"投稿する"ボタンを押していただき、フォームにしたがって入力してください。<br>
-    また、ヘッダーのユーザー名ページには自身の投稿一覧があるので、そこから投稿詳細の確認を行うことが出来ます。
-    ジャンルは自由に追加可能です。
+    本ページ上部の"投稿する"ボタンを押していただき、フォームにしたがって入力してください。
+    また、同様に上部にあるユーザー名のページから自身の投稿一覧があるので、そこから投稿詳細の確認・編集することが出来ます。
+    投稿・ジャンルを削除したい場合は、お手数ですが削除申請を願います。管理人が確認後削除いたします。
+    ジャンルは自由に追加可能です(最大8件)。
    
   </div>
 </div>
