--- a/app/views/admin/books/index.html.erb
+++ b/app/views/admin/books/index.html.erb
@@ -1,26 +1,22 @@
-<div class="row justify-content-center pt-5 mb-5">
+<div class="row pt-5">
+  <div class="col-6 offset-3">
     <h4>投稿一覧</h4>
-</div>
-<div class="col-6 offset-3">
     
-  <% @books.each do |book| %>
-    <div class="row border-bottom mb-3">
-      <%= book.title %>
-      ｜
-      <% book.genres.each do |genre| %>
-        <div class=" btn btn-sm btn-secondary mb-1">
-          <%= genre.name %>
-        </div>
+    <% @books.each do |book| %>
+      <div class="row border-bottom mt-5 mb-3">
+      
+        <%= book.title %>　｜
+        <% book.genres.each do |genre| %>
+       
+            <%= genre.name %>
+          　 <i class="fa-solid fa-heart-crack" style="color: blue;"></i>
+                  <%= genre.dislikes.count %>
           
-        <i class="fa-solid fa-heart-crack" style="color: blue;"></i>
-        <%= genre.dislikes.count %>
+          　
+        <% end %>
+        <%= link_to "　削除　", book_path(book.id), method: :delete, class: "btn btn-danger ml-auto mr-3 mb-2" %>
         
-      <% end %>
-      <%= link_to "　削除　", admin_book_path(book), method: :delete, class: "btn btn-sm btn-danger ml-auto mr-3 mb-1" %>
-    </div>
-  <% end %>
-</div>
-  
-<div class="row justify-content-center mb-3">
-  <%= paginate @books %>
+      </div>
+    <% end %>
+  </div>
 </div>
