--- a/app/views/public/searches/_search_bar.html.erb
+++ b/app/views/public/searches/_search_bar.html.erb
@@ -1,15 +1,29 @@
-<div class="container rounded border border-dark bg-light">
-
-  ジャンル検索
-  <div class="row mx-2 mt-2 mb-3">
-
+<div class="container rounded border border-dark bg-light mb-3">
+  <div class="my-2">ジャンル検索</div>
+  
+  <div class="row ml-1 mb-4">
     <%= form_with url: genres_search_path, method: :get, local: true do |f| %>
+    
       <div class="form-inline">
-
         <%= f.text_field :word, class: "form-control form-control-sm mr-3" %>
         <%= f.submit '検索', class: "btn-sm btn-primary" %>
-
       </div>
+      
+    <% end %>
+  </div>
+</div>
+  
+<div class="container rounded border border-dark bg-light">
+  <div class="my-2">本のタイトル検索</div>
+  
+  <div class="row ml-1 mb-4">
+    <%= form_with url: books_search_path, method: :get, local: true do |f| %>
+    
+      <div class="form-inline">
+        <%= f.text_field :word, class: "form-control form-control-sm mr-3" %>
+        <%= f.submit '検索', class: "btn-sm btn-primary" %>
+      </div>
+      
     <% end %>
   </div>
 </div>
