access_authority add

--- a/app/views/public/books/_error.html.erb
+++ b/app/views/public/books/_error.html.erb
@@ -2,7 +2,7 @@
   <div id="error_explanation">
     <ul>
       <% book.errors.full_messages.each do |message| %>
-      <li class="error-alert"><%= message %></li>
+        <li class="error-alert"><%= message %> <i class="fa-solid fa-face-sad-cry"></i></li>
       <% end %>
     </ul>
   </div>
