--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -3,9 +3,11 @@
     <%= link_to edit_user_path(@user) do %>
       <i class="fa-solid fa-user-gear"></i>
     <% end %>
-    <h4>さんのマイページ</h4>
-  
-  <%= link_to "退会する", users_withdraw_path, method: :patch, class: "btn btn-danger ml-5", data: { confirm: "本当に退会しますか？" } %>
+  <h4>さんのマイページ</h4>
+    
+  <% if current_user.id == @user.id %>
+    <%= link_to "退会する", users_withdraw_path, method: :patch, class: "btn btn-danger ml-5", data: { confirm: "本当に退会しますか？" } %>
+  <% end %>
 </div>
 
 <%= render 'public/books/template', books: @books %>
